update token in path in case of reset password
